# ojoniter

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  render.yaml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
ojoniter/: asgi.py  settings.py  urls.py  wsgi.py
posts/: admin.py  forms.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py
static/css/: style.css
templates/: base.html
templates/accounts/: edit_profile.html  login.html  profile.html  register.html  user_list.html
templates/posts/: explore.html  feed.html  post_detail.html
