[project]
name = "ojoniter"
version = "0.1.0"
description = "Simple Twitter clone built with Django"
authors = [
    {name = "deboando"}
]
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
    "gunicorn>=25.0",
    "whitenoise>=6.12",
    "dj-database-url>=3.1",
    "psycopg[binary]>=3.3",
]

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"
pytest-django = "*"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "ojoniter.settings"

[tool.black]
line-length = 120

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
